# RP_Tracking

./: LICENSE  README.md
docs/: demo.md  installation.md  multi_sensor_support.md  partial_data_support.md  readme.md  rp_tracking.md
rp_tracking/rp_preprocessing/: CMakeLists.txt  package.xml
rp_tracking/rp_preprocessing/src/: consecutive_cloud_merge.cpp  multi_cloud_merge.cpp
rp_tracking/rp_tracking/: CMakeLists.txt  package.xml
rp_tracking/rp_tracking/include/rp_tracking/: computeCentroidAndOBB.hpp  region_growing.h
rp_tracking/rp_tracking/launch/: rp_tracking.launch
rp_tracking/rp_tracking/models/: autel_evo.model  autel_evo_mlmu.model  dji_mini_3.model  pepper.model  tello.model  tello_cage.model  tello_mlmu.model  turtlebot.model  turtlebot_single.model
rp_tracking/rp_tracking/src/: background_removal.cpp  cluster_detection.cpp  ground_removal.cpp  robot_detection.cpp
